update: Add: ODATA service (spring), ignite (in memory DB with disk persistence) and lucene (for ipfix records and DPI)